--- a/src/Blazor.Material/package.json
+++ b/src/Blazor.Material/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.4.4",
     "@material/button": "^2.1.1",
     "@material/ripple": "^2.1.1",
+    "@material/top-app-bar": "^2.1.1",
     "autoprefixer": "^9.5.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-object-assign": "^6.22.0",
