--- a/src/Blazor.Material/package.json
+++ b/src/Blazor.Material/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@material/button": "^2.1.1",
+    "@material/drawer": "^2.1.1",
     "@material/ripple": "^2.1.1",
     "@material/top-app-bar": "^2.1.1",
     "autoprefixer": "^9.5.1",
