Upgrade to .NET Core 3 preview 6

--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -33,9 +33,9 @@ steps:
     customCommand: 'run build'
 
 - task: DotNetCoreInstaller@0
-  displayName: 'Use .NET Core sdk 3.0.100-preview5-011568'
+  displayName: 'Use .NET Core SDK 3.0.100-preview6-012264'
   inputs:
-    version: '3.0.100-preview5-011568'
+    version: '3.0.100-preview6-012264'
 
 - task: DotNetCoreCLI@2
   displayName: 'dotnet publish'
@@ -44,7 +44,7 @@ steps:
     publishWebProjects: false
     projects: |
      **/Blazor.Material.csproj
-    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory) -p:Version=$(Build.BuildNumber)'
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
