--- a/src/Blazor.Material/package.json
+++ b/src/Blazor.Material/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "watch": "webpack --watch --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js --optimize-minimize",
+    "build": "webpack --config webpack.prod.js --optimize-minimize --progress",
     "build-dev": "webpack --config webpack.dev.js"
   },
   "private": true,
@@ -15,10 +15,10 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
-    "@material/button": "^2.3.0",
-    "@material/drawer": "^2.3.0",
-    "@material/ripple": "^2.3.0",
-    "@material/top-app-bar": "^2.3.0",
+    "@material/button": "^3.2.0",
+    "@material/drawer": "^3.2.0",
+    "@material/ripple": "^3.2.0",
+    "@material/top-app-bar": "^3.2.0",
     "autoprefixer": "^9.6.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-object-assign": "^6.22.0",
