--- a/src/Blazor.Material/package.json
+++ b/src/Blazor.Material/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "watch": "webpack --watch --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js --optimize-minimize --progress",
+    "build": "webpack --config webpack.prod.js --optimize-minimize --progress --colors --display=minimal",
     "build-dev": "webpack --config webpack.dev.js"
   },
   "private": true,
@@ -13,25 +13,25 @@
     "name": "Leonardo D'Alonzo"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
     "@material/button": "^3.2.0",
     "@material/drawer": "^3.2.0",
     "@material/ripple": "^3.2.0",
     "@material/top-app-bar": "^3.2.0",
-    "autoprefixer": "^9.6.4",
+    "autoprefixer": "^9.7.2",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "extract-loader": "^3.1.0",
-    "file-loader": "^4.2.0",
+    "file-loader": "^4.3.0",
     "material-design-icons": "^3.0.1",
     "postcss-loader": "^3.0.0",
-    "sass": "^1.23.0",
+    "sass": "^1.23.7",
     "sass-loader": "^7.3.1",
-    "webpack": "^4.41.1",
-    "webpack-cli": "^3.3.9",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
     "webpack-merge": "^4.2.2"
   }
 }
