test: Set Up project structure that works with NCrunch

--- a/src/Blazor.Material/Blazor.Material.csproj
+++ b/src/Blazor.Material/Blazor.Material.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Blazor.Material.Components\Blazor.Material.Components.csproj" />
+  </ItemGroup>
+
 </Project>
