ci: Run tests as part of the build pipeline

--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -11,7 +11,7 @@ pool:
 
 variables:
   Major: 0
-  Minor: 0
+  Minor: 1
   BuildConfiguration: 'Release'
 
 steps:
@@ -19,23 +19,27 @@ steps:
   clean: true
 
 - task: Npm@1
-  displayName: 'npm install'
+  displayName: 'Build Static Assets - npm ci'
   inputs:
+    command: ci
     workingDir: src\Blazor.Material
     verbose: false
 
 - task: Npm@1
-  displayName: 'npm run build'
+  displayName: 'Build Static Assets - npm run build'
   inputs:
     command: custom
     workingDir: src\Blazor.Material
     verbose: false
     customCommand: 'run build'
 
-- task: DotNetCoreInstaller@0
-  displayName: 'Use .NET Core SDK 3.0.100-preview6-012264'
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet test'
   inputs:
-    version: '3.0.100-preview6-012264'
+    command: test
+    projects: |
+     **/Test.Blazor.Material.Components
+    arguments: '--configuration $(BuildConfiguration)'
 
 - task: DotNetCoreCLI@2
   displayName: 'dotnet publish'
