test: Use the test approach from SteveSandersonMS/BlazorUnitTestingPrototype

--- a/test/Test.Blazor.Material.Components/Test.Blazor.Material.Components.csproj
+++ b/test/Test.Blazor.Material.Components/Test.Blazor.Material.Components.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+    <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="Shouldly" Version="3.0.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
@@ -22,7 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Blazor.Material.Components\Blazor.Material.Components.csproj" />
-    <ProjectReference Include="..\LD.AspNetCore.Components.Testing\LD.AspNetCore.Components.Testing.csproj" />
+    <ProjectReference Include="..\Microsoft.AspNetCore.Components.Testing\Microsoft.AspNetCore.Components.Testing.csproj" />
   </ItemGroup>
 
 </Project>
