fix(button): Add the ripple element to the button

--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -47,7 +47,7 @@ steps:
     command: publish
     publishWebProjects: false
     projects: |
-     **/Blazor.Material.csproj
+     **/Blazor.Material.Components.WebApp.csproj
     arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory) -p:Version=$(Build.BuildNumber)'
 
 - task: PublishBuildArtifacts@1
