ci: Generate test coverage and publish results

--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -18,6 +18,26 @@ steps:
 - checkout: self
   clean: true
 
+- script: dotnet restore
+  displayName: Restore packages
+
+- script: dotnet build -c $(BuildConfiguration) --no-restore
+  displayName: Build
+
+- task: DotNetCoreCLI@2
+  displayName: 'Test'
+  inputs:
+    command: test
+    publishTestResults: false
+    arguments: '--configuration $(BuildConfiguration) --no-build --results-directory $(Agent.TempDirectory)\TestResults --settings test\coverletArgs.runsettings'
+
+- task: PowerShell@2
+  displayName: 'Publish Test Results'
+  inputs:
+    targetType: 'filepath'
+    filePath: 'test/Send-CoverageResultsToCodecov.ps1'
+    arguments: '-TestResultsBasePath $(Agent.TempDirectory) -NuGetPackagesBasePath $(UserProfile)\.nuget\packages -CodecovUploadToken $(CodecovUploadToken)'
+
 - task: Npm@1
   displayName: 'Build Static Assets - npm ci'
   inputs:
@@ -32,14 +52,6 @@ steps:
     workingDir: src\Blazor.Material
     verbose: false
     customCommand: 'run build'
-
-- task: DotNetCoreCLI@2
-  displayName: 'dotnet test'
-  inputs:
-    command: test
-    projects: |
-     **/Test.Blazor.Material.Components
-    arguments: '--configuration $(BuildConfiguration)'
 
 - task: DotNetCoreCLI@2
   displayName: 'dotnet publish'
