ci: Create and publish NuGet package

--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -1,4 +1,4 @@
-name: $(Major).$(Minor).$(rev:r)
+name: $(Major).$(Minor).$(rev:r)-preview
 
 resources:
 - repo: self
@@ -54,13 +54,29 @@ steps:
     customCommand: 'run build'
 
 - task: DotNetCoreCLI@2
-  displayName: 'dotnet publish'
+  displayName: 'Pack'
+  inputs:
+    command: custom
+    custom: 'pack'
+    arguments: '$(Build.SourcesDirectory)\src\Blazor.Material.Components\Blazor.Material.Components.csproj --configuration $(BuildConfiguration) -p:Version=$(Build.BuildNumber) -p:PackageVersion=$(Build.BuildNumber) --output $(Build.ArtifactStagingDirectory)/nuget'
+
+- task: DotNetCoreCLI@2
+  displayName: 'Publish Live Demo'
   inputs:
     command: publish
     publishWebProjects: false
     projects: |
      **/Blazor.Material.Components.WebApp.csproj
-    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory) -p:Version=$(Build.BuildNumber)'
+    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)/demo -p:Version=$(Build.BuildNumber)'
 
 - task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact: drop'
+  displayName: 'Publish Artifact: Demo'
+  inputs:
+    artifactName: 'demo' 
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/demo'
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact: NuGet'
+  inputs:
+    artifactName: 'nuget' 
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)/nuget'
