--- a/src/Blazor.Material.Components/Blazor.Material.Components.csproj
+++ b/src/Blazor.Material.Components/Blazor.Material.Components.csproj
@@ -1,8 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RazorLangVersion>3.0</RazorLangVersion>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <Authors>Leonardo D'Alonzo</Authors>
+    <Company />
+    <PackageProjectUrl>https://github.com/ldalonzo/material-components-web-blazor</PackageProjectUrl>
+    <PackageId>Leonardo.AspNetCore.Components.Material</PackageId>
+    <Product>Material Components for Blazor WebAssembly</Product>
+    <Version>0.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
