--- a/examples/Blazor.Material.Components.WebApp/Blazor.Material.Components.WebApp.csproj
+++ b/examples/Blazor.Material.Components.WebApp/Blazor.Material.Components.WebApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Blazor.Material\Blazor.Material.csproj" />
+    <ProjectReference Include="..\..\src\Blazor.Material.Components\Blazor.Material.Components.csproj" />
   </ItemGroup>
 
 </Project>
