--- a/src/Blazor.Material/package.json
+++ b/src/Blazor.Material/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "watch": "webpack --watch --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js --optimize-minimize --progress --colors --display=minimal",
+    "build": "webpack --config webpack.prod.js --optimize-minimize --progress --colors",
     "build-dev": "webpack --config webpack.dev.js"
   },
   "private": true,
