refactor: Change namespace to 'Leonardo.AspNetCore.Components.Material'

--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -58,7 +58,7 @@ steps:
   inputs:
     command: custom
     custom: 'pack'
-    arguments: '$(Build.SourcesDirectory)\src\Blazor.Material.Components\Blazor.Material.Components.csproj --configuration $(BuildConfiguration) -p:Version=$(Build.BuildNumber) -p:PackageVersion=$(Build.BuildNumber) --output $(Build.ArtifactStagingDirectory)/nuget'
+    arguments: '$(Build.SourcesDirectory)\src\Leonardo.AspNetCore.Components.Material\Leonardo.AspNetCore.Components.Material.csproj --configuration $(BuildConfiguration) -p:Version=$(Build.BuildNumber) -p:PackageVersion=$(Build.BuildNumber) --output $(Build.ArtifactStagingDirectory)/nuget'
 
 - task: DotNetCoreCLI@2
   displayName: 'Publish Live Demo'
