--- a/test/Test.Blazor.Material.Components/Test.Blazor.Material.Components.csproj
+++ b/test/Test.Blazor.Material.Components/Test.Blazor.Material.Components.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Blazor.Material.Components\Blazor.Material.Components.csproj" />
+    <ProjectReference Include="..\..\src\Leonardo.AspNetCore.Components.Material\Leonardo.AspNetCore.Components.Material.csproj" />
     <ProjectReference Include="..\Microsoft.AspNetCore.Components.Testing\Microsoft.AspNetCore.Components.Testing.csproj" />
   </ItemGroup>
 
