--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -5,7 +5,7 @@ resources:
   clean: true
 
 pool:
-  name: Hosted Windows 2019 with VS2019
+  vmImage: 'windows-latest'
   demands:
   - npm
 
@@ -18,10 +18,16 @@ steps:
 - checkout: self
   clean: true
 
+- task: UseDotNet@2
+  displayName: 'Use .NET Core SDK 3.1'
+  inputs:
+    packageType: sdk
+    version: 3.1.x
+
 - script: dotnet restore
   displayName: Restore packages
 
-- script: dotnet build -c $(BuildConfiguration) --no-restore
+- script: dotnet build --configuration $(BuildConfiguration) --no-restore
   displayName: Build
 
 - task: DotNetCoreCLI@2
