refactor: Relocate webpack project

--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -48,14 +48,14 @@ steps:
   displayName: 'Build Static Assets - npm ci'
   inputs:
     command: ci
-    workingDir: src\Blazor.Material
+    workingDir: $(Build.SourcesDirectory)\src\Leonardo.AspNetCore.Components.Material
     verbose: false
 
 - task: Npm@1
   displayName: 'Build Static Assets - npm run build'
   inputs:
     command: custom
-    workingDir: src\Blazor.Material
+    workingDir: $(Build.SourcesDirectory)\src\Leonardo.AspNetCore.Components.Material
     verbose: false
     customCommand: 'run build'
 
