--- a/src/Leonardo.AspNetCore.Components.Material/package.json
+++ b/src/Leonardo.AspNetCore.Components.Material/package.json
@@ -18,6 +18,7 @@
     "@material/button": "^4.0.0",
     "@material/drawer": "^4.0.0",
     "@material/ripple": "^4.0.0",
+    "@material/select": "^4.0.0",
     "@material/textfield": "^4.0.0",
     "@material/top-app-bar": "^4.0.0",
     "autoprefixer": "^9.7.3",
