build: Use semantic versioning

--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -1,4 +1,4 @@
-name: $(Major).$(Minor).$(rev:r)-preview
+name: $(Major).$(Minor).$(Patch)-preview.$(BuildID)
 
 resources:
 - repo: self
@@ -10,8 +10,9 @@ pool:
   - npm
 
 variables:
-  Major: 0
-  Minor: 2
+  Major: 1
+  Minor: 0
+  Patch: 0
   BuildConfiguration: 'Release'
 
 stages:
