--- a/src/Leonardo.AspNetCore.Components.Material/package.json
+++ b/src/Leonardo.AspNetCore.Components.Material/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@material/button": "^4.0.0",
+    "@material/checkbox": "^4.0.0",
     "@material/drawer": "^4.0.0",
     "@material/ripple": "^4.0.0",
     "@material/select": "^4.0.0",
