--- a/src/Leonardo.AspNetCore.Components.Material/Leonardo.AspNetCore.Components.Material.csproj
+++ b/src/Leonardo.AspNetCore.Components.Material/Leonardo.AspNetCore.Components.Material.csproj
@@ -19,6 +19,11 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.2" />
