--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -1,4 +1,4 @@
-name: $(Major).$(Minor).$(Patch)-preview.$(BuildID)
+name: $(Major).$(Minor).$(Patch)-preview2.$(BuildID)
 
 resources:
 - repo: self
