test: Add 'BlazorUnitTestingPrototype' as a git submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "submodules/material-components-web-catalog"]
 	path = submodules/material-components-web-catalog
 	url = https://github.com/material-components/material-components-web-catalog.git
+[submodule "submodules/BlazorUnitTestingPrototype"]
+	path = submodules/BlazorUnitTestingPrototype
+	url = https://github.com/ldalonzo/BlazorUnitTestingPrototype.git
