test: Switch over to BlazorUnitTestingPrototype

--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -21,6 +21,7 @@ stages:
   - job: BuildJob
     steps:
     - checkout: self
+      submodules: true
       clean: true
     
     - script: dotnet restore
