ci: Pull steps to build static assets in a template

--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -43,29 +43,19 @@ stages:
         targetType: 'filepath'
         filePath: 'test/Send-CoverageResultsToCodecov.ps1'
         arguments: '-TestResultsBasePath $(Agent.TempDirectory) -NuGetPackagesBasePath $(UserProfile)\.nuget\packages -CodecovUploadToken $(CodecovUploadToken)'
-    
-    - task: Npm@1
-      displayName: 'Build Static Assets - npm ci'
-      inputs:
-        command: ci
+
+    - template: jobs/npm-build.yaml
+      parameters:
+        name: 'Components'
         workingDir: $(Build.SourcesDirectory)\src\Leonardo.AspNetCore.Components.Material
-        verbose: false
-    
-    - task: Npm@1
-      displayName: 'Build Static Assets - npm run build'
-      inputs:
-        command: custom
-        workingDir: $(Build.SourcesDirectory)\src\Leonardo.AspNetCore.Components.Material
-        verbose: false
-        customCommand: 'run build'
-    
+
     - task: DotNetCoreCLI@2
       displayName: 'Pack'
       inputs:
         command: custom
         custom: 'pack'
         arguments: '$(Build.SourcesDirectory)\src\Leonardo.AspNetCore.Components.Material\Leonardo.AspNetCore.Components.Material.csproj --configuration $(BuildConfiguration) -p:Version=$(Build.BuildNumber) -p:PackageVersion=$(Build.BuildNumber) --output $(Build.ArtifactStagingDirectory)/nuget'
-    
+
     - task: DotNetCoreCLI@2
       displayName: 'Publish Live Demo'
       inputs:
