ci(catalog): Build static assets and remove the output from source control

--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -36,7 +36,7 @@ stages:
         command: test
         publishTestResults: false
         arguments: '--configuration $(BuildConfiguration) --no-build --results-directory $(Agent.TempDirectory)\TestResults --settings test\coverletArgs.runsettings'
-    
+
     - task: PowerShell@2
       displayName: 'Publish Test Results'
       inputs:
@@ -48,6 +48,11 @@ stages:
       parameters:
         name: 'Components'
         workingDir: $(Build.SourcesDirectory)\src\Leonardo.AspNetCore.Components.Material
+
+    - template: jobs/npm-build.yaml
+      parameters:
+        name: 'Catalog'
+        workingDir: $(Build.SourcesDirectory)\examples\Blazor.Material.Components.WebApp
 
     - task: DotNetCoreCLI@2
       displayName: 'Pack'
