chore(demo): Upgrade to Blazor WebAssembly 3.2.0 Preview 2

--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -23,13 +23,19 @@ stages:
     - checkout: self
       submodules: true
       clean: true
-    
+
+    - task: UseDotNet@2
+      displayName: 'Use .NET Core SDK'
+      inputs:
+        packageType: sdk
+        version: 3.1.102
+
     - script: dotnet restore
       displayName: Restore NuGet packages
-    
+
     - script: dotnet build --configuration $(BuildConfiguration) --no-restore
       displayName: Build
-    
+
     - task: DotNetCoreCLI@2
       displayName: 'Test'
       inputs:
@@ -75,7 +81,7 @@ stages:
       inputs:
         artifactName: 'demo' 
         pathtoPublish: '$(Build.ArtifactStagingDirectory)/demo'
-    
+
     - task: PublishBuildArtifacts@1
       displayName: 'Publish Artifact: NuGet'
       inputs:
