--- a/src/Leonardo.AspNetCore.Components.Material/package.json
+++ b/src/Leonardo.AspNetCore.Components.Material/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.9.0",
     "@material/button": "^5.1.0",
     "@material/checkbox": "^5.1.0",
+    "@material/data-table": "^5.1.0",
     "@material/drawer": "^5.1.0",
     "@material/form-field": "^5.1.0",
     "@material/icon-button": "^5.1.0",
