--- a/src/Leonardo.AspNetCore.Components.Material/Leonardo.AspNetCore.Components.Material.csproj
+++ b/src/Leonardo.AspNetCore.Components.Material/Leonardo.AspNetCore.Components.Material.csproj
@@ -17,6 +17,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
