--- a/test/Test.Leonardo.AspNetCore.Components.Material/Test.Leonardo.AspNetCore.Components.Material.csproj
+++ b/test/Test.Leonardo.AspNetCore.Components.Material/Test.Leonardo.AspNetCore.Components.Material.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RazorLangVersion>3.0</RazorLangVersion>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -25,6 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Leonardo.AspNetCore.Components.Material\Leonardo.AspNetCore.Components.Material.csproj" />
     <ProjectReference Include="..\..\submodules\BlazorUnitTestingPrototype\Microsoft.AspNetCore.Components.Testing\Microsoft.AspNetCore.Components.Testing.csproj" />
+    <ProjectReference Include="..\Leonardo.AspNetCore.Components.Material.Testing\Leonardo.AspNetCore.Components.Material.Testing.csproj" />
   </ItemGroup>
 
 </Project>
