--- a/examples/Blazor.Material.Components.WebApp/package.json
+++ b/examples/Blazor.Material.Components.WebApp/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@material/chips": "^4.0.0",
     "@material/drawer": "^4.0.0",
+    "@material/snackbar": "^4.0.0",
     "@material/tab-bar": "^4.0.0",
     "@material/typography": "^4.0.0",
     "@microsoft/applicationinsights-web": "^2.5.2",
