--- a/src/Leonardo.AspNetCore.Components.Material/package.json
+++ b/src/Leonardo.AspNetCore.Components.Material/package.json
@@ -24,6 +24,8 @@
     "@material/ripple": "^5.1.0",
     "@material/select": "^5.1.0",
     "@material/snackbar": "^5.1.0",
+    "@material/tab": "^5.1.0",
+    "@material/tab-bar": "^5.1.0",
     "@material/textfield": "^5.1.0",
     "@material/top-app-bar": "^5.1.0",
     "autoprefixer": "^9.7.6",
