ci: Azure Storage static file hosting

--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -80,10 +80,20 @@ stages:
         command: custom
         custom: publish
         publishWebProjects: false
-        arguments: '$(Build.SourcesDirectory)/examples/Blazor.Material.Components.WebApp/Blazor.Material.Components.WebApp.csproj --configuration $(BuildConfiguration) -p:Version=$(Build.BuildNumber) -p:AssemblyVersion=$(Major).$(Minor).$(Patch).$(Build.BuildID) --output $(Build.ArtifactStagingDirectory)/demo'
+        zipAfterPublish: false
+        arguments: '$(Build.SourcesDirectory)/examples/Blazor.Material.Components.WebApp/Blazor.Material.Components.WebApp.csproj --configuration $(BuildConfiguration) -p:Version=$(Build.BuildNumber) -p:AssemblyVersion=$(Major).$(Minor).$(Patch).$(Build.BuildID) --output $(Build.ArtifactStagingDirectory)/catalog'
 
     - task: PublishBuildArtifacts@1
       displayName: 'Catalog - Publish Artifact'
       inputs:
         artifactName: 'demo' 
-        pathtoPublish: '$(Build.ArtifactStagingDirectory)/demo'
+        pathtoPublish: '$(Build.ArtifactStagingDirectory)/catalog'
+
+    - task: AzureFileCopy@2
+      displayName: 'Catalog - AzureFileCopy'
+      inputs:
+        SourcePath: $(Build.ArtifactStagingDirectory)/catalog/wwwroot
+        azureSubscription: $(AzureSubscription)
+        Destination: AzureBlob
+        storage: $(storage)
+        ContainerName: '$web'
