ci(demo): Use yaml task to deploy to Azure App Service

--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -90,10 +90,19 @@ stages:
         pathtoPublish: '$(Build.ArtifactStagingDirectory)/catalog'
 
     - task: AzureFileCopy@2
-      displayName: 'Catalog - AzureFileCopy'
+      displayName: 'Catalog - Deploy to Blob Storage'
       inputs:
         SourcePath: $(Build.ArtifactStagingDirectory)/catalog/wwwroot
         azureSubscription: $(AzureSubscription)
         Destination: AzureBlob
         storage: $(storage)
         ContainerName: '$web'
+
+    - task: AzureRmWebAppDeployment@4
+      displayName: 'Catalog - Deploy to Azure App Service'
+      inputs:
+        azureSubscription: $(AzureSubscription)
+        WebAppKind: webApp
+        WebAppName: 'blazor-material'
+        Package: $(Build.ArtifactStagingDirectory)/catalog
+        RemoveAdditional: true
