--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -91,6 +91,7 @@ stages:
 
     - task: AzureFileCopy@2
       displayName: 'Catalog - Deploy to Blob Storage'
+      condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/develop'))
       inputs:
         SourcePath: $(Build.ArtifactStagingDirectory)/catalog/wwwroot
         azureSubscription: $(AzureSubscription)
