--- a/src/Leonardo.AspNetCore.Components.Material/package.json
+++ b/src/Leonardo.AspNetCore.Components.Material/package.json
@@ -1,16 +1,9 @@
 {
-  "name": "blazor-material",
-  "version": "0.0.1",
-  "description": "",
+  "private": true,
   "scripts": {
     "watch": "webpack --watch --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js --optimize-minimize --progress --colors",
     "build-dev": "webpack --config webpack.dev.js"
-  },
-  "private": true,
-  "dependencies": {},
-  "author": {
-    "name": "Leonardo D'Alonzo"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -40,6 +33,8 @@
     "postcss-loader": "^3.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2"
