--- a/src/Leonardo.AspNetCore.Components.Material/package.json
+++ b/src/Leonardo.AspNetCore.Components.Material/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "watch": "webpack --watch --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js --optimize-minimize --progress --colors",
-    "build-dev": "webpack --config webpack.dev.js"
+    "build-dev": "webpack --config webpack.dev.js --progress --colors"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
