--- a/src/Leonardo.AspNetCore.Components.Material/package.json
+++ b/src/Leonardo.AspNetCore.Components.Material/package.json
@@ -18,6 +18,7 @@
     "@material/ripple": "^6.0.0",
     "@material/select": "^6.0.0",
     "@material/snackbar": "^6.0.0",
+    "@material/switch": "^6.0.0",
     "@material/tab": "^6.0.0",
     "@material/tab-bar": "^6.0.0",
     "@material/textfield": "^6.0.0",
