chore: Upgrade to Blazor WebAssembly 3.2.0

--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -25,12 +25,6 @@ stages:
       submodules: true
       clean: true
 
-    # - task: UseDotNet@2
-    #   displayName: 'Use .NET Core SDK'
-    #   inputs:
-    #     packageType: sdk
-    #     version: 3.1.201
-
     - script: dotnet restore
       displayName: Restore NuGet packages
 
@@ -101,6 +95,7 @@ stages:
 
     - task: AzureRmWebAppDeployment@4
       displayName: 'Catalog - Deploy to Azure App Service'
+      condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       inputs:
         azureSubscription: $(AzureSubscription)
         WebAppKind: webApp
