ci: Specify NuGet.config for 'dotnet restore' step

--- a/.azure/pipelines/ci.yaml
+++ b/.azure/pipelines/ci.yaml
@@ -25,8 +25,13 @@ stages:
       submodules: true
       clean: true
 
-    - script: dotnet restore
-      displayName: Restore NuGet packages
+    - task: DotNetCoreCLI@2
+      displayName: 'dotnet restore'
+      inputs:
+        command: 'restore'
+        feedsToUse: 'config'
+        nugetConfigPath: 'NuGet.config'
+        projects: '**/*.csproj'
 
     - script: dotnet build --configuration $(BuildConfiguration) --no-restore
       displayName: Build
