--- a/test/Leonardo.AspNetCore.Components.Material.Testing/Leonardo.AspNetCore.Components.Material.Testing.csproj
+++ b/test/Leonardo.AspNetCore.Components.Material.Testing/Leonardo.AspNetCore.Components.Material.Testing.csproj
@@ -1,15 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <RazorLangVersion>3.0</RazorLangVersion>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.8" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.8" />
-  </ItemGroup>
 
 
   <ItemGroup>
