--- a/examples/Blazor.Material.Components.WebApp/package.json
+++ b/examples/Blazor.Material.Components.WebApp/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "watch": "webpack --watch --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js --optimize-minimize --progress --colors",
-    "build-dev": "webpack --config webpack.dev.js"
+    "build": "webpack --config webpack.prod.js --progress",
+    "build-dev": "webpack --config webpack.dev.js --progress --profile"
   },
   "private": true,
   "dependencies": {},
@@ -18,17 +17,18 @@
     "@material/snackbar": "^4.0.0",
     "@material/tab-bar": "^4.0.0",
     "@material/typography": "^4.0.0",
-    "@microsoft/applicationinsights-web": "^2.5.10",
-    "autoprefixer": "^9.7.6",
+    "@microsoft/applicationinsights-web": "^2.5.11",
+    "autoprefixer": "^10.2.3",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.2",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
-    "postcss-loader": "^4.1.0",
-    "sass": "^1.32.2",
+    "postcss": "^8.2.4",
+    "postcss-loader": "^4.2.0",
+    "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-merge": "^4.2.2"
+    "webpack": "^5.17.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-merge": "^5.7.3"
   }
 }
