--- a/src/Leonardo.AspNetCore.Components.Material/package.json
+++ b/src/Leonardo.AspNetCore.Components.Material/package.json
@@ -1,9 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "watch": "webpack --watch --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js --optimize-minimize --progress --colors",
-    "build-dev": "webpack --config webpack.dev.js --progress --colors"
+    "build": "webpack --config webpack.prod.js --progress",
+    "build-dev": "webpack --config webpack.dev.js --progress --profile"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -23,21 +22,22 @@
     "@material/tab-bar": "^9.0.0",
     "@material/textfield": "^9.0.0",
     "@material/top-app-bar": "^9.0.0",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.2.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^4.3.0",
+    "css-loader": "^5.0.1",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
     "material-design-icons": "^3.0.1",
+    "postcss": "^8.2.4",
     "postcss-loader": "^4.2.0",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-merge": "^4.2.2"
+    "webpack": "^5.17.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-merge": "^5.7.3"
   }
 }
